Cambios a overflow de grid title para arreglar bug que tenia

--- a/css.css
+++ b/css.css
@@ -61,6 +61,7 @@ text-align: center;
 padding-top: 1em;
 color: rgb(0, 0, 0);
 font-size: 3em;
+overflow:hidden;
 }
 .grid-title h2 {
     width: 35%;
@@ -68,8 +69,9 @@ font-size: 3em;
     background-image: linear-gradient(45deg, #b6b6b6 , #9b9b9b 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; 
-    position: relative;
+    position:relative;
     animation: Title 10s infinite ease-in-out;
+  
 }
 
  .grid-gallery{
